vlib/v/checker/tests/assign_main_fn_err.vv
fn main() {
	foo := main
	foo()
}
